<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/blue">

    <TextView
        android:id="@+id/title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_monthly_income"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/bg_input"
        android:hint="@string/input_monthly_income"
        android:textColor="@color/blue"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/title_app"
        app:layout_constraintStart_toStartOf="@+id/title_app"
        app:layout_constraintTop_toBottomOf="@+id/title_app" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_user_name"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:background="@drawable/bg_input"
        android:hint="@string/input_user_name"
        android:textColor="@color/blue"
        android:paddingStart="10dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="@+id/input_monthly_income"
        app:layout_constraintStart_toStartOf="@+id/input_monthly_income"
        app:layout_constraintTop_toBottomOf="@+id/input_monthly_income" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_social_class"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:text="@string/button_social_class"
        android:onClick="goToNextScreen"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@+id/input_user_name"
        app:layout_constraintStart_toStartOf="@+id/input_user_name"
        app:layout_constraintTop_toBottomOf="@+id/input_user_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/version_app"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_social_class"
        app:layout_constraintStart_toStartOf="@+id/button_social_class" />
</androidx.constraintlayout.widget.ConstraintLayout>